Translation files as single layer json

--- a/lang/es.json
+++ b/lang/es.json
@@ -1,262 +1,221 @@
 {
-  "anima": {
-    "weapon": {
-      "size": "Tamaño",
-      "baseDamage": "Daño Base",
-      "quality": "Calidad",
-      "weaponSizes": {
-        "normal":"Normal",
-        "big":"Grande",
-        "huge":"Enorme"
-    },
-      "speed": "Turno",
-      "damageTypePrimary":"Crítico Primario",
-      "damageTypeSecondary":"Crìtico Secundario",
-      "weaponDamageType":{
-        "cut":"Filo",
-        "impact":"Contundente",
-        "thrust":"Penetrante",
-        "heat":"Calor",
-        "electric":"Eléctrico",
-        "cold":"Frío",
-        "energy":"Energía"
-    },
-      "fortitude":"Entereza",
-      "breakage":"Rotura",
-      "special":"Especial",
-      "weaponTypePrimary":"Tipo Primario",
-      "weaponTypeSecondary":"Tipo Secundario",
-      "weaponType":{
-        "shortArms":"Arma Corta",
-        "axe":"Hacha",
-        "mace":"Maza",
-        "sword":"Espada",
-        "twoHanded":"Mandoble",
-        "poleWeapon":"Asta",
-        "cord":"Cuerda",
-        "mixedClass":"Mixta"
-    },
-      "description":"Descripción",
-      "requiredStrength":"Fuerza Requerida",
-      "presence":"Presencia"
-    },
-    "template": {
-      "character": {
-        "name": "Nombre",
-        "level": "Nivel",
-        "gnosis": "Gnosis",
-        "race": "Raza",
-        "class": "Categoría",
-        "lifePoints":"Puntos de Vida",
-        "fatiguePoints": "Puntos de Cansancio",
-        "characteristicsTab": "Características",
-        "primaryAbilitiesTab": "Habilidades Primarias",
-        "resistances":{
-          "physicalResistance":"RF",
-          "magicResistance":"RM",
-          "psychicResistance":"RP",
-          "venomResistance":"RV",
-          "diseaseResistance":"RE"
-        },
-        "characteristics": {
-           "strength": "Fuerza",
-           "dexterity": "Destreza",
-           "agility": "Agilidad",
-           "constitution": "Constitución",
-           "perception": "Percepción",
-           "willpower": "Voluntad",
-           "power": "Poder",
-           "intelligence": "Intelligencia"
-        },
-        "primaryabilities":{
-          "combatAbilities":{
-            "attack":"Ataque",
-            "block":"Parada",
-            "dodge":"Esquiva",
-            "wearArmor":"Llevar Armadura"
-          },
-          "sobrenaturalAbilities":{
-            "zeon":"Zeón",
-            "magicAccumulation":"ACT",
-            "magicProjection":"Proyección Mágica",
-            "magicLevel":"Nivel de Magia",
-            "summon":"Convocar",
-            "control":"Dominar",
-            "bind":"Atar",
-            "banish":"Desconvocar"
-          },
-          "psychicAbilities":{
-            "psychicPoints":"CV",
-            "psychicProjection":"Proyección Psíquica"
-          },
-          "kiAbilities":{
-            "ki":"Ki",
-            "kiPoints":"Puntos de Ki",
-            "kiAccumulation":"Acumulación de Ki",
-            "martialKnowledge":"Conocimiento Marcial"
-          }
-        },
-        "secondaryAbilities":{
-          "athleticAbilities":{
-            "acrobatics":"Acrobacias",
-            "athleticism":"Atletismo",
-            "climb":"Trepar",
-            "jump":"Saltar",
-            "ride":"Montar",
-            "swim":"Nadar"
-          },
-          "socialAbilities":{
-            "intimidate":"Intimidar",
-            "leadership":"Liderazgo",
-            "persuasion":"Persuasión",
-            "style":"Estilo",
-            "trading":"Comercio",
-            "etiquette":"Etiqueta",
-            "streetwise":"Callejeo"
-          },
-          "perceptionAbilities":{
-            "notice":"Advertir",
-            "search":"Buscar",
-            "track":"Rastrear"
-          },
-          "intellectualAbilities":{
-            "animals":"Animales",
-            "appraisal":"Tasación",
-            "herbalLore":"Herbolaria",
-            "history":"Historia",
-            "magicAppraisal":"Valoración Mágica",
-            "medicine":"Medicina",
-            "memorize":"Memorizar",
-            "navigation":"Navegación",
-            "occult":"Ocultismo",
-            "science":"Ciencia",
-            "law":"Leyes",
-            "tactics":"Táctica"
-          },
-          "vigorAbilities":{
-            "composure":"Frialdad",
-            "withstandPain":"Resistir el Dolor",
-            "featsOfStrength":"Proezas de Fuerza"
-          },
-          "subterfugeAbilities":{
-            "theft":"Robo",
-            "disguise":"Disfraz",
-            "hide":"Ocultarse",
-            "stealth":"Sigilo",
-            "trapLore":"Trampas",
-            "lockPicking":"Cerrajería",
-            "poisons":"Venenos"
-          },
-          "creativeAbilities":{
-            "art":"Arte",
-            "dance":"Baile",
-            "music":"Música",
-            "sleightOfHand":"Trucos de Manos",
-            "forging":"Forja",
-            "runes":"Runas",
-            "alchemy":"Alquimia",
-            "cooking":"Cocina"
-          }
-          
-        }
-      }
-    },
-    "races": {
-      "human": "Humano",
-      "sylvain": "Sylvain",
-      "dukzarist": "Duk'Zarist",
-      "jayan": "Jayán",
-      "daimah": "Daimah",
-      "danjayni": "D'Anjayni",
-      "ebudan": "Ebudan"
-    },
-    "classes": {
-        "warrior": "Guerrero",
-        "acrobaticWarrior": "Guerrero Acróbata",
-        "paladin": "Paladín",
-        "darkPaladin": "Paladín Oscuro",
-        "weaponsmaster": "Maestro de Armas",
-        "technician": "Tecnicista",
-        "tao": "Tao",
-        "ranger": "Explorador",
-        "shadow": "Sombra",
-        "thief": "Ladrón",
-        "assassin": "Asesino",
-        "wizard": "Hechicero",
-        "warlock": "Warlock",
-        "illusionist": "Ilusionista",
-        "wizardMentalist": "Hechicero Mentalista",
-        "summoner": "Conjurador",
-        "warriorSummoner": "Conjurador",
-        "mentalist": "Mentalista",
-        "warriorMentalist": "Guerrero Mentalista",
-        "novel": "Novel"
-    },
-    "spell":{
-      "magicPath":{
-        "light":"Luz",
-        "darkness":"Oscuridad",
-        "creation":"Creación",
-        "destruction":"Destrucción",
-        "fire":"Fuego",
-        "water":"Agua",
-        "earth":"Tierra",
-        "air":"Aire",
-        "essence":"Esencia",
-        "illusion":"Ilusión",
-        "necromancy":"Nigromancia",
-        "freeAccess":"Acceso Libre",
-        "chaos":"Caos",
-        "war":"Guerra",
-        "literature":"Literae",
-        "death":"Muerte",
-        "nobility":"Nobleza",
-        "peace":"Paz",
-        "sin":"Pecado",
-        "knowledge":"Conocimiento",
-        "blood":"Sangre",
-        "dreams":"Sueños",
-        "time":"Tiempo",
-        "umbra":"Umbra",
-        "void":"Vacío",
-        "music":"Música"
-      },
-      "name":"Nombre",
-      "level":"Nivel",
-      "type":"Tipo",
-      "effect":"Efecto",
-      "grade":"Grado",
-      "basic":"Base",
-      "intermediate":"Intermedio",
-      "advanced":"Avanzado",
-      "arcane":"Arcano",
-      "zeon":"Zeón",
-      "intelligenceRequired":"Int. Requerida",
-      "maintenance":"Mantenimiento" 
-    },
-    "psychicspell":{
-      "name":"Nombre",
-      "level":"Nivel",
-      "action":"Acción",
-      "psychicDiscipline":{
-        "telepathy":"Telepatía",
-        "psychokinesis":"Telequinesis",
-        "pyrokinesis":"Piroquinesis",
-        "cryokinesis":"Crioquinesis",
-        "physicalIncrease":"Incremento Físico",
-        "energy":"Energía",
-        "sentience":"Sentiente",
-        "telemetry":"Telemetría",
-        "matrixPowers":"Poderes Matriciales",
-        "causality":"Causalidad",
-        "electromagnetism":"Electromagnetismo",
-        "teleportation":"Teletransportación",
-        "light":"Luz",
-        "hypersensitivity":"Hipersensibilidad"
-      },
-      "description":"Descripción",
-      "effect":"Efecto"
-    }
-  }
+  "anima.acrobatics": "Acrobacias",
+  "anima.acrobaticWarrior": "Guerrero Acróbata",
+  "anima.action": "Acción",
+  "anima.advanced": "Avanzado",
+  "anima.agility": "Agilidad",
+  "anima.air": "Aire",
+  "anima.alchemy": "Alquimia",
+  "anima.animals": "Animales",
+  "anima.appraisal": "Tasación",
+  "anima.arcane": "Arcano",
+  "anima.art": "Arte",
+  "anima.assassin": "Asesino",
+  "anima.athleticAbilities": "Habilidades atléticas",
+  "anima.athleticism": "Atletismo",
+  "anima.attack": "Ataque",
+  "anima.axe": "Hacha",
+  "anima.banish": "Desconvocar",
+  "anima.baseDamage": "Daño Base",
+  "anima.basic": "Base",
+  "anima.big": "Grande",
+  "anima.bind": "Atar",
+  "anima.block": "Parada",
+  "anima.blood": "Sangre",
+  "anima.breakage": "Rotura",
+  "anima.causality": "Causalidad",
+  "anima.chaos": "Caos",
+  "anima.characteristics": "Características",
+  "anima.class": "Categoría",
+  "anima.climb": "Trepar",
+  "anima.cold": "Frío",
+  "anima.combat": "Combate",
+  "anima.combatAbilities": "Habilidades de Combate",
+  "anima.composure": "Frialdad",
+  "anima.constitution": "Constitución",
+  "anima.control": "Dominar",
+  "anima.cooking": "Cocina",
+  "anima.cord": "Cuerda",
+  "anima.creation": "Creación",
+  "anima.creativeAbilities": "Habilidades creativas",
+  "anima.cryokinesis": "Crioquinesis",
+  "anima.cut": "Corte",
+  "anima.daimah": "Daimah",
+  "anima.damageTypePrimary": "Crítico primario",
+  "anima.damageTypeSecondary": "Crítico secundario",
+  "anima.dance": "Baile",
+  "anima.danjayni": "D'Anjayni",
+  "anima.darkness": "Oscuridad",
+  "anima.darkPaladin": "Paladín Oscuro",
+  "anima.death": "Muerte",
+  "anima.description": "Descripción",
+  "anima.destruction": "Destrucción",
+  "anima.dexterity": "Destreza",
+  "anima.diseaseResistance": "RE",
+  "anima.disguise": "Disfraz",
+  "anima.dodge": "Esquiva",
+  "anima.domine": "Domine",
+  "anima.dreams": "Sueños",
+  "anima.dukzarist": "Duk'Zarist",
+  "anima.earth": "Tierra",
+  "anima.ebudan": "Ebudan",
+  "anima.effect": "Efecto",
+  "anima.elan": "Elan",
+  "anima.electric": "Eléctrico",
+  "anima.electromagnetism": "Electromagnetismo",
+  "anima.energy": "Energía",
+  "anima.essence": "Esencia",
+  "anima.etiquette": "Etiqueta",
+  "anima.fatigue": "Cansancio",
+  "anima.fatiguePoints": "Puntos de Cansancio",
+  "anima.featsOfStrength": "Proezas de Fuerza",
+  "anima.fire": "Fuego",
+  "anima.forging": "Forja",
+  "anima.fortitude": "Entereza",
+  "anima.freeAccess": "Libre acceso",
+  "anima.gnosis": "Gnosis",
+  "anima.grade": "Grado",
+  "anima.heat": "Calor",
+  "anima.herbalLore": "Herbolaria",
+  "anima.hide": "Ocultarse",
+  "anima.history": "Historia",
+  "anima.huge": "Enorme",
+  "anima.human": "Humano",
+  "anima.hypersensitivity": "Hipersensibilidad",
+  "anima.illusion": "Ilusión",
+  "anima.illusionist": "Ilusionista",
+  "anima.impact": "Contundente",
+  "anima.intellectualAbilities": "Habilidades intelectuales",
+  "anima.intelligence": "Inteligencia",
+  "anima.intelligenceRequired": "Inteligencia requerida",
+  "anima.intermediate": "Intermedio",
+  "anima.intimidate": "Intimidar",
+  "anima.jayan": "Jayan",
+  "anima.jump": "Saltar",
+  "anima.ki": "Ki",
+  "anima.kiAbilities": "Habilidades del Ki",
+  "anima.kiAccumulation": "Acumulación de Ki",
+  "anima.kiPoints": "Puntos de Ki",
+  "anima.knowledge": "Conocimiento",
+  "anima.law": "Leyes",
+  "anima.leadership": "Liderazgo",
+  "anima.level": "Nivel",
+  "anima.lifePoints": "Puntos de Vida",
+  "anima.lifePointsShort": "PV",
+  "anima.light": "Luz",
+  "anima.literature": "Literae",
+  "anima.lockPicking": "Cerrajería",
+  "anima.mace": "Maza",
+  "anima.magicAccumulation": "ACT",
+  "anima.magicAppraisal": "Valoración Mágica",
+  "anima.magicLevel": "Nivel de Magia",
+  "anima.magicPath": "Vía de magia",
+  "anima.magicProjection": "Proyección Mágica",
+  "anima.magicResistance": "RM",
+  "anima.main": "Principal",
+  "anima.maintenance": "Mantenimiento",
+  "anima.martialKnowledge": "Conocimiento Marcial",
+  "anima.matrixPowers": "Poderes Matriciales",
+  "anima.medicine": "Medicina",
+  "anima.memorize": "Memorizar",
+  "anima.mentalist": "Mentalista",
+  "anima.mixedClass": "Mixta",
+  "anima.music": "Música",
+  "anima.mystic": "Místicos",
+  "anima.name": "Nombre",
+  "anima.navigation": "Navegación",
+  "anima.necromancy": "Nigromancia",
+  "anima.nobility": "Nobleza",
+  "anima.normal": "Normal",
+  "anima.notice": "Advertir",
+  "anima.novel": "Novel",
+  "anima.occult": "Ocultismo",
+  "anima.paladin": "Paladín",
+  "anima.peace": "Paz",
+  "anima.perception": "Percepción",
+  "anima.perceptionAbilities": "Habilidades Perceptivas",
+  "anima.persuasion": "Persuasión",
+  "anima.physicalIncrease": "Incremento Físico",
+  "anima.physicalResistance": "RF",
+  "anima.poisons": "Venenos",
+  "anima.poleWeapon": "Asta",
+  "anima.power": "Poder",
+  "anima.presence": "Presencia",
+  "anima.primaryAbilities": "Habilidades Primarias",
+  "anima.psychicAbilities": "Habilidades psíquicas",
+  "anima.psychicDiscipline": "Disciplina psíquica",
+  "anima.psychicPoints": "CV",
+  "anima.psychicPotential": "Potencial Psíquico",
+  "anima.psychicProjection": "Proyección Psíquica",
+  "anima.psychicResistance": "RP",
+  "anima.psychicspell": "Poder psíquico",
+  "anima.psychokinesis": "Telequinesis",
+  "anima.pyrokinesis": "Piroquinesis",
+  "anima.quality": "Calidad",
+  "anima.race": "Raza",
+  "anima.ranger": "Explorador",
+  "anima.requiredStrength": "Fuerza requerida",
+  "anima.resistances": "Resistencias",
+  "anima.ride": "Montar",
+  "anima.runes": "Runas",
+  "anima.science": "Ciencia",
+  "anima.search": "Buscar",
+  "anima.secondaries": "Secundarias",
+  "anima.secondaryAbilities": "Habilidades secundarias",
+  "anima.sentience": "Sentiente",
+  "anima.shadow": "Sombra",
+  "anima.shortArms": "Arma Corta",
+  "anima.sin": "Pecado",
+  "anima.size": "Tamaño",
+  "anima.sleightOfHand": "Truco de manos",
+  "anima.sobrenaturalAbilities": "Habilidades Místicas",
+  "anima.socialAbilities": "Habilidades sociales",
+  "anima.special": "Especial",
+  "anima.speed": "Turno",
+  "anima.stealth": "Sigilo",
+  "anima.streetwise": "Callejeo",
+  "anima.strength": "Fuerza",
+  "anima.style": "Estilo",
+  "anima.subterfugeAbilities": "Habilidades de subterfugio",
+  "anima.summon": "Convocar",
+  "anima.summoner": "Conjurador",
+  "anima.swim": "Nadar",
+  "anima.sword": "Espada",
+  "anima.sylvain": "Sylvain",
+  "anima.tactics": "Táctica",
+  "anima.tao": "Tao",
+  "anima.technician": "Tecnicista",
+  "anima.telemetry": "Telemetría",
+  "anima.telepathy": "Telepatía",
+  "anima.teleportation": "Teletransporte",
+  "anima.theft": "Robo",
+  "anima.thief": "Ladrón",
+  "anima.thrust": "Penetrante",
+  "anima.time": "Tiempo",
+  "anima.track": "Rastrear",
+  "anima.trading": "Comercio",
+  "anima.trapLore": "Trampería",
+  "anima.twoHanded": "Mandoble",
+  "anima.type": "Tipo",
+  "anima.umbra": "Umbral",
+  "anima.venomResistance": "RV",
+  "anima.vigorAbilities": "Habilidades de vigor",
+  "anima.void": "Vacío",
+  "anima.war": "Guerra",
+  "anima.warlock": "Warlock",
+  "anima.warrior": "Guerrero",
+  "anima.warriorMentalist": "Guerrero Mentalista",
+  "anima.warriorSummoner": "Guerrero conjurador",
+  "anima.water": "Agua",
+  "anima.weapon": "Arma",
+  "anima.weaponsmaster": "Maestro en Armas",
+  "anima.weaponType": "Tipología",
+  "anima.weaponTypePrimary": "Tipo primario",
+  "anima.weaponTypeSecondary": "Tipo secundario",
+  "anima.wearArmor": "Llevar Armadura",
+  "anima.willpower": "Voluntad",
+  "anima.withstandPain": "Resistir el dolor",
+  "anima.wizard": "Hechicero",
+  "anima.wizardMentalist": "Hechicero Mentalista",
+  "anima.zeon": "Zeon"
 }
-  
