--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -3,7 +3,7 @@
   "anima.acrobaticWarrior": "Guerrero Acróbata",
   "anima.action": "Acción",
   "anima.advanced": "Avanzado",
-  "anima.agility": "Agilidad",
+  "anima.agi": "Agi",
   "anima.air": "Aire",
   "anima.alchemy": "Alquimia",
   "anima.animals": "Animales",
@@ -28,18 +28,18 @@
   "anima.characteristics": "Características",
   "anima.class": "Categoría",
   "anima.climb": "Trepar",
-  "anima.cold": "Frío",
+  "anima.cold": "Fri",
   "anima.combat": "Combate",
   "anima.combatAbilities": "Habilidades de Combate",
   "anima.composure": "Frialdad",
-  "anima.constitution": "Constitución",
+  "anima.con": "Con",
   "anima.control": "Dominar",
   "anima.cooking": "Cocina",
   "anima.cord": "Cuerda",
   "anima.creation": "Creación",
   "anima.creativeAbilities": "Habilidades creativas",
   "anima.cryokinesis": "Crioquinesis",
-  "anima.cut": "Corte",
+  "anima.cut": "Fil",
   "anima.daimah": "Daimah",
   "anima.damageTypePrimary": "Crítico primario",
   "anima.damageTypeSecondary": "Crítico secundario",
@@ -50,8 +50,8 @@
   "anima.death": "Muerte",
   "anima.description": "Descripción",
   "anima.destruction": "Destrucción",
-  "anima.dexterity": "Destreza",
-  "anima.diseaseResistance": "RE",
+  "anima.dex": "Des",
+  "anima.disr": "Enfermedades",
   "anima.disguise": "Disfraz",
   "anima.dodge": "Esquiva",
   "anima.domine": "Domine",
@@ -61,9 +61,9 @@
   "anima.ebudan": "Ebudan",
   "anima.effect": "Efecto",
   "anima.elan": "Elan",
-  "anima.electric": "Eléctrico",
+  "anima.electric": "Ele",
   "anima.electromagnetism": "Electromagnetismo",
-  "anima.energy": "Energía",
+  "anima.energy": "Ene",
   "anima.essence": "Esencia",
   "anima.etiquette": "Etiqueta",
   "anima.fatigue": "Cansancio",
@@ -75,7 +75,7 @@
   "anima.freeAccess": "Libre acceso",
   "anima.gnosis": "Gnosis",
   "anima.grade": "Grado",
-  "anima.heat": "Calor",
+  "anima.heat": "Cal",
   "anima.herbalLore": "Herbolaria",
   "anima.hide": "Ocultarse",
   "anima.history": "Historia",
@@ -84,9 +84,9 @@
   "anima.hypersensitivity": "Hipersensibilidad",
   "anima.illusion": "Ilusión",
   "anima.illusionist": "Ilusionista",
-  "anima.impact": "Contundente",
+  "anima.impact": "Con",
   "anima.intellectualAbilities": "Habilidades intelectuales",
-  "anima.intelligence": "Inteligencia",
+  "anima.int": "Int",
   "anima.intelligenceRequired": "Inteligencia requerida",
   "anima.intermediate": "Intermedio",
   "anima.intimidate": "Intimidar",
@@ -111,7 +111,7 @@
   "anima.magicLevel": "Nivel de Magia",
   "anima.magicPath": "Vía de magia",
   "anima.magicProjection": "Proyección Mágica",
-  "anima.magicResistance": "RM",
+  "anima.magr": "Mágica",
   "anima.main": "Principal",
   "anima.maintenance": "Mantenimiento",
   "anima.martialKnowledge": "Conocimiento Marcial",
@@ -132,14 +132,14 @@
   "anima.occult": "Ocultismo",
   "anima.paladin": "Paladín",
   "anima.peace": "Paz",
-  "anima.perception": "Percepción",
+  "anima.per": "Per",
   "anima.perceptionAbilities": "Habilidades Perceptivas",
   "anima.persuasion": "Persuasión",
   "anima.physicalIncrease": "Incremento Físico",
-  "anima.physicalResistance": "RF",
+  "anima.phyr": "Física",
   "anima.poisons": "Venenos",
   "anima.poleWeapon": "Asta",
-  "anima.power": "Poder",
+  "anima.pow": "Pod",
   "anima.presence": "Presencia",
   "anima.primaryAbilities": "Habilidades Primarias",
   "anima.psychicAbilities": "Habilidades psíquicas",
@@ -147,7 +147,7 @@
   "anima.psychicPoints": "CV",
   "anima.psychicPotential": "Potencial Psíquico",
   "anima.psychicProjection": "Proyección Psíquica",
-  "anima.psychicResistance": "RP",
+  "anima.psyr": "Psíquica",
   "anima.psychicspell": "Poder psíquico",
   "anima.psychokinesis": "Telequinesis",
   "anima.pyrokinesis": "Piroquinesis",
@@ -174,7 +174,7 @@
   "anima.speed": "Turno",
   "anima.stealth": "Sigilo",
   "anima.streetwise": "Callejeo",
-  "anima.strength": "Fuerza",
+  "anima.str": "Fue",
   "anima.style": "Estilo",
   "anima.subterfugeAbilities": "Habilidades de subterfugio",
   "anima.summon": "Convocar",
@@ -190,7 +190,7 @@
   "anima.teleportation": "Teletransporte",
   "anima.theft": "Robo",
   "anima.thief": "Ladrón",
-  "anima.thrust": "Penetrante",
+  "anima.thrust": "Pen",
   "anima.time": "Tiempo",
   "anima.track": "Rastrear",
   "anima.trading": "Comercio",
@@ -198,7 +198,7 @@
   "anima.twoHanded": "Mandoble",
   "anima.type": "Tipo",
   "anima.umbra": "Umbral",
-  "anima.venomResistance": "RV",
+  "anima.poir": "Venenos",
   "anima.vigorAbilities": "Habilidades de vigor",
   "anima.void": "Vacío",
   "anima.war": "Guerra",
@@ -213,17 +213,24 @@
   "anima.weaponTypePrimary": "Tipo primario",
   "anima.weaponTypeSecondary": "Tipo secundario",
   "anima.wearArmor": "Llevar Armadura",
-  "anima.willpower": "Voluntad",
+  "anima.will": "Vol",
   "anima.withstandPain": "Resistir el dolor",
   "anima.wizard": "Hechicero",
   "anima.wizardMentalist": "Hechicero Mentalista",
   "anima.zeon": "Zeon",
 
-  "anima.background": "Origen",
-  "anima.experience": "XP",
+  "anima.experience": "Exp",
   "anima.nature": "Natura",
-  "anima.maxLife": "Vida Máxima",
-  "anima.regenerationSHORT": "Regen.",
-  "anima.movementSHORT": "Movient.",
-  "anima.modifiers": "Modificadores"
+  "anima.modifiers": "Modificadores",
+  "anima.modifiersPhysical": "Físico",
+  "anima.modifiersAll": "Acción",
+  "anima.piloting": "Pilotar",
+  "anima.animism": "Animismo",
+  "anima.ritualCalligraphy": "Caligrafía Ritual",
+  "anima.jewelry": "Orfebrería",
+  "anima.tailoring": "Confección",
+  "anima.constructMarionettes": "Confección de Marionetas",
+  "anima.extra": "Extra",
+  "anima.movement": "Movimiento",
+  "anima.armor": "Armadura"
 }
