--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -11,7 +11,7 @@
   "anima.arcane": "Arcano",
   "anima.art": "Arte",
   "anima.assassin": "Asesino",
-  "anima.athleticAbilities": "Habilidades atléticas",
+  "anima.athleticAbilities": "Atléticas",
   "anima.athleticism": "Atletismo",
   "anima.attack": "Ataque",
   "anima.axe": "Hacha",
@@ -30,14 +30,14 @@
   "anima.climb": "Trepar",
   "anima.cold": "Fri",
   "anima.combat": "Combate",
-  "anima.combatAbilities": "Habilidades de Combate",
+  "anima.combatAbilities": "Combate",
   "anima.composure": "Frialdad",
   "anima.con": "Con",
   "anima.control": "Dominar",
   "anima.cooking": "Cocina",
   "anima.cord": "Cuerda",
   "anima.creation": "Creación",
-  "anima.creativeAbilities": "Habilidades creativas",
+  "anima.creativeAbilities": "Creativas",
   "anima.cryokinesis": "Crioquinesis",
   "anima.cut": "Fil",
   "anima.daimah": "Daimah",
@@ -68,7 +68,7 @@
   "anima.etiquette": "Etiqueta",
   "anima.fatigue": "Cansancio",
   "anima.fatiguePoints": "Puntos de Cansancio",
-  "anima.featsOfStrength": "Proezas de Fuerza",
+  "anima.featsOfStrength": "P. Fuerza",
   "anima.fire": "Fuego",
   "anima.forging": "Forja",
   "anima.fortitude": "Entereza",
@@ -85,7 +85,7 @@
   "anima.illusion": "Ilusión",
   "anima.illusionist": "Ilusionista",
   "anima.impact": "Con",
-  "anima.intellectualAbilities": "Habilidades intelectuales",
+  "anima.intellectualAbilities": "Intelectuales",
   "anima.int": "Int",
   "anima.intelligenceRequired": "Inteligencia requerida",
   "anima.intermediate": "Intermedio",
@@ -107,7 +107,7 @@
   "anima.lockPicking": "Cerrajería",
   "anima.mace": "Maza",
   "anima.magicAccumulation": "ACT",
-  "anima.magicAppraisal": "Valoración Mágica",
+  "anima.magicAppraisal": "V. Mágica",
   "anima.magicLevel": "Nivel de Magia",
   "anima.magicPath": "Vía de magia",
   "anima.magicProjection": "Proyección Mágica",
@@ -133,7 +133,7 @@
   "anima.paladin": "Paladín",
   "anima.peace": "Paz",
   "anima.per": "Per",
-  "anima.perceptionAbilities": "Habilidades Perceptivas",
+  "anima.perceptionAbilities": "Perceptivas",
   "anima.persuasion": "Persuasión",
   "anima.physicalIncrease": "Incremento Físico",
   "anima.phyr": "Física",
@@ -167,16 +167,16 @@
   "anima.shortArms": "Arma Corta",
   "anima.sin": "Pecado",
   "anima.size": "Tamaño",
-  "anima.sleightOfHand": "Truco de manos",
+  "anima.sleightOfHand": "T. Manos",
   "anima.sobrenaturalAbilities": "Habilidades Místicas",
-  "anima.socialAbilities": "Habilidades sociales",
+  "anima.socialAbilities": "Sociales",
   "anima.special": "Especial",
   "anima.speed": "Turno",
   "anima.stealth": "Sigilo",
   "anima.streetwise": "Callejeo",
   "anima.str": "Fue",
   "anima.style": "Estilo",
-  "anima.subterfugeAbilities": "Habilidades de subterfugio",
+  "anima.subterfugeAbilities": "Subterfugio",
   "anima.summon": "Convocar",
   "anima.summoner": "Conjurador",
   "anima.swim": "Nadar",
@@ -199,7 +199,7 @@
   "anima.type": "Tipo",
   "anima.umbra": "Umbral",
   "anima.poir": "Venenos",
-  "anima.vigorAbilities": "Habilidades de vigor",
+  "anima.vigorAbilities": "Vigor",
   "anima.void": "Vacío",
   "anima.war": "Guerra",
   "anima.warlock": "Warlock",
@@ -214,7 +214,7 @@
   "anima.weaponTypeSecondary": "Tipo secundario",
   "anima.wearArmor": "Llevar Armadura",
   "anima.will": "Vol",
-  "anima.withstandPain": "Resistir el dolor",
+  "anima.withstandPain": "Res. Dolor",
   "anima.wizard": "Hechicero",
   "anima.wizardMentalist": "Hechicero Mentalista",
   "anima.zeon": "Zeon",
@@ -226,10 +226,10 @@
   "anima.modifiersAll": "Acción",
   "anima.piloting": "Pilotar",
   "anima.animism": "Animismo",
-  "anima.ritualCalligraphy": "Caligrafía Ritual",
+  "anima.ritualCalligraphy": "Cal. Ritual",
   "anima.jewelry": "Orfebrería",
   "anima.tailoring": "Confección",
-  "anima.constructMarionettes": "Confección de Marionetas",
+  "anima.constructMarionettes": "C. Marionetas",
   "anima.extra": "Extra",
   "anima.movement": "Movimiento",
   "anima.armor": "Armadura"
