--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -232,5 +232,6 @@
   "anima.constructMarionettes": "C. Marionetas",
   "anima.extra": "Extra",
   "anima.movement": "Movimiento",
-  "anima.armor": "Armadura"
+  "anima.armor": "Armadura",
+  "anima.newSkill": "Hab. Nueva"
 }
