Apply suggestions from code review
Thanks to @Linkaynn for spotting the typos & other improvements

Co-authored-by: Jesé Romero Arbelo <jeseromeroarbelo@gmail.com>

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -142,13 +142,13 @@
   "anima.pow": "Pow",
   "anima.presence": "Presence",
   "anima.primaryAbilities": "Primary Abilities",
-  "anima.psychicAbilities": "Psychic Abilites",
+  "anima.psychicAbilities": "Psychic Abilities",
   "anima.psychicDiscipline": "Psychic Discipline",
   "anima.psychicPoints": "Psychic Points",
   "anima.psychicPotential": "Psychic Potential",
   "anima.psychicProjection": "Psychic Projection",
   "anima.psyr": "PsR",
-  "anima.psychicspell": "Psychic Spell",
+  "anima.psychicSpell": "Psychic Spell",
   "anima.psychokinesis": "Psychokinesis",
   "anima.pyrokinesis": "Pyrokinesis",
   "anima.quality": "Quality",
