fix: typos and remove unused lint rules

--- a/lang/es.json
+++ b/lang/es.json
@@ -148,7 +148,7 @@
   "anima.psychicPotential": "Potencial Psíquico",
   "anima.psychicProjection": "Proyección Psíquica",
   "anima.psychicResistance": "RP",
-  "anima.psychicspell": "Poder psíquico",
+  "anima.psychicSpell": "Poder psíquico",
   "anima.psychokinesis": "Telequinesis",
   "anima.pyrokinesis": "Piroquinesis",
   "anima.quality": "Calidad",
