--- a/lang/en.json
+++ b/lang/en.json
@@ -142,13 +142,13 @@
   "anima.power": "Power",
   "anima.presence": "Presence",
   "anima.primaryAbilities": "Primary Abilities",
-  "anima.psychicAbilities": "Psychic Abilites",
+  "anima.psychicAbilities": "Psychic Abilities",
   "anima.psychicDiscipline": "Psychic Discipline",
   "anima.psychicPoints": "Psychic Points",
   "anima.psychicPotential": "Psychic Potential",
   "anima.psychicProjection": "Psychic Projection",
   "anima.psychicResistance": "PsR",
-  "anima.psychicspell": "Psychic Spell",
+  "anima.psychicSpell": "Psychic Spell",
   "anima.psychokinesis": "Psychokinesis",
   "anima.pyrokinesis": "Pyrokinesis",
   "anima.quality": "Quality",
