Initial work on combat sheet html

--- a/lang/en.json
+++ b/lang/en.json
@@ -41,6 +41,7 @@
   "anima.cryokinesis": "Cryokinesis",
   "anima.cut": "Cut",
   "anima.daimah": "Daimah",
+  "anima.damageType": "Damage type",
   "anima.damageTypePrimary": "Primary Damage Type",
   "anima.damageTypeSecondary": "Secondary Damage Type",
   "anima.dance": "Dance",
