--- a/lang/es.json
+++ b/lang/es.json
@@ -41,6 +41,7 @@
   "anima.cryokinesis": "Crioquinesis",
   "anima.cut": "Corte",
   "anima.daimah": "Daimah",
+  "anima.damageType": "Crítico",
   "anima.damageTypePrimary": "Crítico primario",
   "anima.damageTypeSecondary": "Crítico secundario",
   "anima.dance": "Baile",
