--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -3,7 +3,7 @@
   "anima.acrobaticWarrior": "Acrobatic Warrior",
   "anima.action": "Action",
   "anima.advanced": "Advanced",
-  "anima.agi": "Agi",
+  "anima.agility": "Agility",
   "anima.air": "Air",
   "anima.alchemy": "Alchemy",
   "anima.animals": "Animals",
@@ -32,7 +32,7 @@
   "anima.combat": "Combat",
   "anima.combatAbilities": "Combat Abilities",
   "anima.composure": "Composure",
-  "anima.con": "Con",
+  "anima.constitution": "Constitution",
   "anima.control": "Control",
   "anima.cooking": "Cooking",
   "anima.cord": "Cord",
@@ -41,6 +41,7 @@
   "anima.cryokinesis": "Cryokinesis",
   "anima.cut": "Cut",
   "anima.daimah": "Daimah",
+  "anima.damageType": "Damage type",
   "anima.damageTypePrimary": "Primary Damage Type",
   "anima.damageTypeSecondary": "Secondary Damage Type",
   "anima.dance": "Dance",
@@ -50,8 +51,8 @@
   "anima.death": "Death",
   "anima.description": "Description",
   "anima.destruction": "Destruction",
-  "anima.dex": "Dex",
-  "anima.disr": "DR",
+  "anima.dexterity": "Dexterity",
+  "anima.diseaseResistance": "DR",
   "anima.disguise": "Disguise",
   "anima.dodge": "Dodge",
   "anima.domine": "Domine",
@@ -61,9 +62,9 @@
   "anima.ebudan": "Ebudan",
   "anima.effect": "Effect",
   "anima.elan": "Elan",
-  "anima.electric": "Ele",
+  "anima.electric": "Electric",
   "anima.electromagnetism": "Electromagnetism",
-  "anima.energy": "Ene",
+  "anima.energy": "Energy",
   "anima.essence": "Essence",
   "anima.etiquette": "Etiquette",
   "anima.fatigue": "Fatigue",
@@ -84,9 +85,9 @@
   "anima.hypersensitivity": "Hypersensitivity",
   "anima.illusion": "Illusion",
   "anima.illusionist": "Illusionist",
-  "anima.impact": "Imp",
+  "anima.impact": "Impact",
   "anima.intellectualAbilities": "Intellectual Abilities",
-  "anima.int": "Int",
+  "anima.intelligence": "Intelligence",
   "anima.intelligenceRequired": "Intelligence Required",
   "anima.intermediate": "Intermediate",
   "anima.intimidate": "Intimidate",
@@ -111,7 +112,7 @@
   "anima.magicLevel": "Magic Level",
   "anima.magicPath": "Magic Path",
   "anima.magicProjection": "Magic Projection",
-  "anima.magr": "MR",
+  "anima.magicResistance": "MR",
   "anima.main": "Main",
   "anima.maintenance": "Maintenance",
   "anima.martialKnowledge": "Martial Knowledge",
@@ -132,14 +133,14 @@
   "anima.occult": "Occult",
   "anima.paladin": "Paladin",
   "anima.peace": "Peace",
-  "anima.per": "Per",
+  "anima.perception": "Perception",
   "anima.perceptionAbilities": "Perception Abilities",
   "anima.persuasion": "Persuasion",
   "anima.physicalIncrease": "Physical Increase",
-  "anima.phyr": "PhR",
+  "anima.physicalResistance": "PhR",
   "anima.poisons": "Poisons",
   "anima.poleWeapon": "Pole Weapons",
-  "anima.pow": "Pow",
+  "anima.power": "Power",
   "anima.presence": "Presence",
   "anima.primaryAbilities": "Primary Abilities",
   "anima.psychicAbilities": "Psychic Abilities",
@@ -147,7 +148,7 @@
   "anima.psychicPoints": "Psychic Points",
   "anima.psychicPotential": "Psychic Potential",
   "anima.psychicProjection": "Psychic Projection",
-  "anima.psyr": "PsR",
+  "anima.psychicResistance": "PsR",
   "anima.psychicSpell": "Psychic Spell",
   "anima.psychokinesis": "Psychokinesis",
   "anima.pyrokinesis": "Pyrokinesis",
@@ -174,7 +175,7 @@
   "anima.speed": "Speed",
   "anima.stealth": "Stealth",
   "anima.streetwise": "Streetwise",
-  "anima.str": "Str",
+  "anima.strength": "Strength",
   "anima.style": "Style",
   "anima.subterfugeAbilities": "Subterfuge Abilities",
   "anima.summon": "Summon",
@@ -190,7 +191,7 @@
   "anima.teleportation": "Teleportation",
   "anima.theft": "Theft",
   "anima.thief": "Thief",
-  "anima.thrust": "Thr",
+  "anima.thrust": "Thrust",
   "anima.time": "Time",
   "anima.track": "Track",
   "anima.trading": "Trading",
@@ -198,7 +199,7 @@
   "anima.twoHanded": "Two-Handed",
   "anima.type": "Type",
   "anima.umbra": "Umbra",
-  "anima.poir": "VR",
+  "anima.venomResistance": "VR",
   "anima.vigorAbilities": "Vigor Abilities",
   "anima.void": "Void",
   "anima.war": "War",
@@ -213,25 +214,9 @@
   "anima.weaponTypePrimary": "Primary Weapon Type",
   "anima.weaponTypeSecondary": "Secondary Weapon Type",
   "anima.wearArmor": "Wear Armor",
-  "anima.will": "Will",
+  "anima.willpower": "Willpower",
   "anima.withstandPain": "Withstand Pain",
   "anima.wizard": "Wizard",
   "anima.wizardMentalist": "Wizard Mentalist",
-  "anima.zeon": "Zeon",
-
-  "anima.background": "Backgorund",
-  "anima.experience": "XP",
-  "anima.nature": "Nature",
-  "anima.maxLife": "Maximum life",
-  "anima.regenerationSHORT": "Regen.",
-  "anima.movementSHORT": "Movement",
-  "anima.modifiers": "Modifiers",
-  "anima.penaltySHORT":"Pen.",
-  "anima.physicalPenaltySHORT": "Pen. Physical",
-  "anima.piloting": "Piloting",
-  "anima.animism": "Animism",
-  "anima.ritualCalligraphy": "Ritual Calligraphy",
-  "anima.jewelry": "Jewelry",
-  "anima.tailoring": "Tailoring",
-  "anima.constructMarionettes": "Construct Marionettes"
+  "anima.zeon": "Zeon"
 }
