Fix literal translation

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -136,7 +136,7 @@
   "anima.notice": "Notice",
   "anima.novel": "Novel",
   "anima.occult": "Occult",
-  "anima.offensive": "Ofensiva",
+  "anima.offensive": "Offensive",
   "anima.paladin": "Paladin",
   "anima.peace": "Peace",
   "anima.perception": "Perception",
