--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -232,8 +232,8 @@
   "anima.nature": "Natura",
   "anima.maxLife": "Vida Máxima",
   "anima.regenerationSHORT": "Regen.",
-  "anima.movementSHORT": "Movient.",
-  "anima.modifiers": "Modificadores"
+  "anima.movementSHORT": "Movimie.",
+  "anima.modifiers": "Modificadores",
   "anima.modifiersPhysical": "Físico",
   "anima.modifiersAll": "Acción",
   "anima.piloting": "Pilotar",
@@ -246,5 +246,7 @@
   "anima.movement": "Movimiento",
   "anima.armor": "Armadura",
   "anima.newSkill": "Hab. Nueva",
-  "dialogs.continue": "Continuar"
+  "dialogs.title": "Diálogo",
+  "dialogs.continue": "Continuar",
+  "dialogs.mod.content": "Modificador"
 }
