changes: add text localizations

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -148,6 +148,7 @@
   "anima.poleWeapon": "Pole Weapons",
   "anima.power": "Power",
   "anima.presence": "Presence",
+  "anima.psychics": "Psychic",
   "anima.primaryAbilities": "Primary Abilities",
   "anima.psychicAbilities": "Psychic Abilities",
   "anima.psychicDiscipline": "Psychic Discipline",
@@ -235,7 +236,7 @@
   "anima.modifiers": "Modifiers",
   "anima.modifiersPhysical": "Physical",
   "anima.modifiersAll": "All actions",
-  "anima.penaltySHORT":"Pen.",
+  "anima.penaltySHORT": "Pen.",
   "anima.physicalPenaltySHORT": "Pen. Physical",
   "anima.piloting": "Piloting",
   "anima.animism": "Animism",
@@ -243,10 +244,48 @@
   "anima.jewelry": "Jewelry",
   "anima.tailoring": "Tailoring",
   "anima.constructMarionettes": "Construct Marionettes",
+  "anima.extra": "Extra",
+  "anima.movement": "Movement",
   "anima.armor": "Armor",
   "dialogs.title": "Dialog",
   "dialogs.continue": "Continue",
   "dialogs.mod.content": "Modifier",
+  "contextualMenu.common.options.delete": "Delete",
+  "contextualMenu.elan.options.addPower": "Add power",
   "dialogs.items.secondarySkill.content": "Skill name",
-  "dialogs.items.freeAccessSpell.content": "Free access spell name"
+  "dialogs.items.freeAccessSpell.content": "Free access spell name",
+  "dialogs.items.level.content": "Archetype name",
+  "dialogs.items.language.content": "Language name",
+  "dialogs.items.elan_power.content": "Power name",
+  "dialogs.items.elan.content": "Elan name",
+  "dialogs.items.title.content": "Title name",
+  "dialogs.items.advantage.content": "Advantage name",
+  "dialogs.items.disadvantage.content": "Disadvantage name",
+  "dialogs.items.contact.content": "Contact name",
+  "dialogs.items.note.content": "Note content",
+  "anima.ui.advantageSection.title": "Advantages",
+  "anima.ui.aspectSection.age.title": "Age",
+  "anima.ui.aspectSection.appearance.title": "Appearance",
+  "anima.ui.aspectSection.eyes.title": "Eyes",
+  "anima.ui.aspectSection.genre.title": "Genre",
+  "anima.ui.aspectSection.hair.title": "Hair",
+  "anima.ui.aspectSection.height.title": "Height",
+  "anima.ui.aspectSection.race.title": "Race",
+  "anima.ui.aspectSection.size.title": "Size",
+  "anima.ui.aspectSection.title": "Aspect",
+  "anima.ui.aspectSection.weight.title": "Weight",
+  "anima.ui.contactSection.contactRow.description": "Description",
+  "anima.ui.contactSection.contactRow.name": "Name",
+  "anima.ui.contactSection.title": "Contacts",
+  "anima.ui.descriptionSection.title": "Description",
+  "anima.ui.disadvantageSection.title": "Disadvantages",
+  "anima.ui.elanSection.elanRow.level": "Lvl",
+  "anima.ui.elanSection.elanRow.name": "Power",
+  "anima.ui.elanSection.title": "Elan",
+  "anima.ui.experienceSection.title": "Experience",
+  "anima.ui.languageSection.base": "Base",
+  "anima.ui.languageSection.title": "Languages",
+  "anima.ui.levelSection.title": "Level",
+  "anima.ui.notesSection.title": "Notes",
+  "anima.ui.titleSection.title": "Titles"
 }
