--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -245,9 +245,45 @@
   "anima.extra": "Extra",
   "anima.movement": "Movimiento",
   "anima.armor": "Armadura",
+  "contextualMenu.common.options.delete": "Eliminar",
+  "contextualMenu.elan.options.addPower": "Añadir poder",
   "dialogs.title": "Diálogo",
   "dialogs.continue": "Continuar",
   "dialogs.mod.content": "Modificador",
   "dialogs.items.secondarySkill.content": "Nombre de la habilidad",
-  "dialogs.items.freeAccessSpell.content": "Nombre del hechizo de acceso libre"
+  "dialogs.items.freeAccessSpell.content": "Nombre del hechizo de acceso libre",
+  "dialogs.items.level.content": "Nombre del arquetipo",
+  "dialogs.items.language.content": "Nombre del lenguaje",
+  "dialogs.items.elan_power.content": "Nombre del poder",
+  "dialogs.items.elan.content": "Nombre del Elan",
+  "dialogs.items.title.content": "Nombre del título",
+  "dialogs.items.advantage.content": "Nombre de la ventaja",
+  "dialogs.items.disadvantage.content": "Nombre de la desventaja",
+  "dialogs.items.contact.content": "Nombre del contacto",
+  "dialogs.items.note.content": "Contenido de la nota",
+  "anima.ui.advantageSection.title": "Ventajas",
+  "anima.ui.aspectSection.age.title": "Edad",
+  "anima.ui.aspectSection.appearance.title": "Apariencia",
+  "anima.ui.aspectSection.eyes.title": "Ojos",
+  "anima.ui.aspectSection.genre.title": "Sexo",
+  "anima.ui.aspectSection.hair.title": "Pelo",
+  "anima.ui.aspectSection.height.title": "Altura",
+  "anima.ui.aspectSection.race.title": "Raza",
+  "anima.ui.aspectSection.size.title": "Tamaño",
+  "anima.ui.aspectSection.title": "Aspecto",
+  "anima.ui.aspectSection.weight.title": "Peso",
+  "anima.ui.contactSection.contactRow.description": "Descripción",
+  "anima.ui.contactSection.contactRow.name": "Nombre",
+  "anima.ui.contactSection.title": "Contactos",
+  "anima.ui.descriptionSection.title": "Descripción",
+  "anima.ui.disadvantageSection.title": "Desventajas",
+  "anima.ui.elanSection.elanRow.level": "Nv",
+  "anima.ui.elanSection.elanRow.name": "Potencia",
+  "anima.ui.elanSection.title": "Elan",
+  "anima.ui.experienceSection.title": "Experiencia",
+  "anima.ui.languageSection.base": "Base",
+  "anima.ui.languageSection.title": "Idiomas",
+  "anima.ui.levelSection.title": "Nivel",
+  "anima.ui.notesSection.title": "Notas",
+  "anima.ui.titleSection.title": "Títulos"
 }
